--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Campo Minato</h1>
+        <button class="btn">Play</button>
+    </header>
+    <main>
+        <div class="container">
+            <div id="grid"></div>
+        </div>
+    </main>
 </body>
 </html>
