--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Campo Minato</h1>
-        <button class="btn">Play</button>
+        <button id="btn">Play</button>
     </header>
     <main>
         <div class="container">
